create PD component and styled

--- a/client/src/Layout/LayoutStyle.css
+++ b/client/src/Layout/LayoutStyle.css
@@ -1,14 +1,14 @@
-.Layout {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 2rem;
-    box-sizing: border-box;
-}
+/*.Layout {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    padding-top: 2rem;*/
+/*    box-sizing: border-box;*/
+/*}*/
 
-.vid{
-    margin-bottom: 2rem;
-    font-weight: bold;
-    font-size: 1rem;
-}
+/*.vid{*/
+/*    margin-bottom: 2rem;*/
+/*    font-weight: bold;*/
+/*    font-size: 1rem;*/
+/*}*/
