--- a/client/src/components/Lacey/LaceyStyle.css
+++ b/client/src/components/Lacey/LaceyStyle.css
@@ -1,4 +1,4 @@
-.PrincessDiana {
+.Lacey{
     width: 70%;
     min-height: 2rem;
     background: var(--var-bg);
@@ -15,4 +15,3 @@
     text-shadow: var(--var-box-shadow);
     margin-bottom: 1rem;
 }
-
